Add iconpack and coloring

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative&family=Sarabun&display=swap" rel="stylesheet">
     <!--Style-->
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
+    <!--Icons-->
+    <link rel="stylesheet" href="assets/style.css">
 
     <title>FCC Portfolio</title>
 </head>
@@ -17,7 +19,7 @@
     <header>
         <nav id="navbar">
             <ul class="flex">
-                <li><a href="#welcome" class="nav-link">About</a></li>
+                <li><a href="#welcome-section" class="nav-link">About</a></li>
                 <li><a href="#projects" class="nav-link">Work</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
@@ -46,7 +48,7 @@
                 </div>
 
                 <div class="card project-tile">
-                    <img src="https://i.ibb.co/qgK06Kq/image.png" alt="" srcset="">
+                    <img src="https://i.ibb.co/dmVsmLR/image.png" alt="" srcset="">
                     <a href="https://codepen.io/lnabesima/full/wvdwQdY" class="caption">Survey Form -  Financing Options</a>
                 </div>
 
@@ -63,10 +65,10 @@
             </header>
             <div class="container">
                 <ul class="flex">
-                    <li><a href="https://twitter.com/lucasnabesima" class="contact-links" target="_blank">Twitter</a></li>
-                    <li><a href="https://github.com/lnabesima" id="profile-link" class="contact-links " target="_blank">GitHub</a></li>
-                    <li><a href="https://www.linkedin.com/in/lucasnabesima/" class="contact-links" target="_blank">LinkedIn</a></li>
-                    <li><a href="mailto:lucas.nabesima@gmail.com" class="contact-links" target="_blank">Email</a></li>
+                    <li><a href="https://twitter.com/lucasnabesima" class="contact-links" target="_blank"><i class="icon-twitter"></i> Twitter</a></li>
+                    <li><a href="https://github.com/lnabesima" id="profile-link" class="contact-links " target="_blank"><i class="icon-github"></i> GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/lucasnabesima/" class="contact-links" target="_blank"><i class="icon-linkedin2"></i> LinkedIn</a></li>
+                    <li><a href="mailto:lucas.nabesima@gmail.com" class="contact-links" target="_blank"><i class="icon-envelop"></i> Email</a></li>
                 </ul>
             </div>
         </section>
